2008-07-12  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8.rb.in: (1) add #to_json to OraDate too.
	    (2) fix a bug when using Oracle 8i and dbd. OCI_ATTR_FSPRECISION
	    is for TIMESTAMP data type which is new in Oracle 9i.

2008-07-07  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8.rb.in: fix the problem that OraNumber#to_json returns
	    "{}" when using Rails. (This issue is reported by Alex Moore)
	    Object#to_json is added by active_support. But active_support
	    doesn't know what OraNumber is.
	* ext/oci8/oraconf.rb: merge chages in ruby-oci8 trunk.

2008-07-05  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: prints more information on checking
	   LD_LIBRARY_PATH.

2008-06-26  KUBO Takehiro  <kubo@jiubao.org>
	* NEWS: add changes between 1.0.1 and 1.0.2.
	* VERSION: change version to 1.0.2.
	* Makefile: add targets 'gem' and 'binary_gem' to make pure ruby
	   and binary gems.
	* ruby-oci8.spec: rename to ruby-oci8.spec.in.
	* ruby-oci8.spec.in: rename from ruby-oci8.spec and set version
	   string from 'VERSION' file.
	* ruby-oci8.gemspec: added.
	* dist-files: add files to ruby-oci8 source packages for gemspec.
	* test/test_clob.rb: fix to pass tests in a deep directory.

2008-06-24  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/handle.c: fix a segv bug in gc mark. (Thanks to authorNari)
	* ext/oci8/oraconf.rb: fix for windows Oracle 11g instant client.
	* test/config.rb, test/test_bind_raw.rb, test/test_bind_time.rb,
	  test/test_break.rb, test/test_clob.rb, test/test_connstr.rb,
	  test/test_dbi.rb, test/test_dbi_clob.rb, test/test_describe.rb,
	  test/test_metadata.rb, test/test_oci8.rb, test/test_oradate.rb,
	  test/test_oranumber.rb:
	    fix to run tests in directories outside of 'test' directory.

2008-04-27  KUBO Takehiro  <kubo@jiubao.org>
	* NEWS: add changes between 1.0.0 and 1.0.1.
	* VERSION: update to 1.0.1.
	* ext/oci8/extconf.rb: raise error if the ruby is 1.9.
	* ext/oci8/oraconf.rb: fix for intel mac instant client.
